Added some validation using the bassistance.de validation plugin.

--- a/war/css/VisualBenefits.css
+++ b/war/css/VisualBenefits.css
@@ -11,3 +11,30 @@ div.showCard {
   text-align:center;
   display:none;
 }
+
+* { 
+    font-family: Verdana; 
+    font-size: 96%; 
+}
+
+label { 
+    width: 10em; 
+    float: left; 
+}
+
+label.error { 
+    float: none; 
+    color: red; 
+    padding-left: .5em; 
+    vertical-align: top; 
+}
+
+p { 
+    clear: both; 
+}
+
+em { 
+    font-weight: bold; 
+    padding-right: 1em; 
+    vertical-align: top; 
+}
